Fix related to T47750: Particle disconnect operator: 'all hair' disabled would not work correctly after first op execution.

This is side issue, main one remains and does not look easy to fix, see report for details.